tests/ui/imports/extern-prelude-extern-crate-fail.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `two_macros`
  --> $DIR/extern-prelude-extern-crate-fail.rs:10:9
   |
LL |         two_macros::m!();
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `two_macros`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
